<resources>
    <string name="app_name">MapSOS</string>
    <string name="mainActivityLabel">MapSOS</string>
    <string name="tvSettings">Scegli chi notificare in caso di incidente:</string>
    <string name="switchEmergencyNumber">Invia SMS al 112</string>
    <string name="switchContact">Invia SMS a un contatto</string>
    <string name="tvContact">Scegli un contatto:</string>
    <string name="LAUNCH_SETTINGS_ACTIVITY">com.example.progetto.SettingsActivity</string>
    <string name="add_contact">Aggiungi Contatto</string>
    <string name="add_name">Aggiungi nome</string>
    <string name="settings">Impostazioni</string>
    <string name="cancella">Cancella</string>
    <string name="contatti_salvati">Contatti salvati</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EMERGENCY_NUMBER">112</string>
    <string name="stop">STOP!</string>
    <string name="settingsActivityLabel">Impostazioni</string>
    <string name="emergencyActivityLabel">Emergenza</string>
</resources>